Added code to modify name

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "My YT Bookmarks",
+    "name": "BasementSports NFTs",
     "version": "0.1.0",
-    "description": "Saving timestamps in YT videos",
+    "description": "This chrome extension is dedicated for BasementSports Extension",
     "permissions": ["storage", "tabs"],
     "host_permissions": [],
     "background": {
@@ -13,7 +13,7 @@
         "24": "crypto.png",
         "32": "crypto.png"
       },
-      "default_title": "My YT Bookmarks",
+      "default_title": "BasementSports NFTs",
       "default_popup": "popup.html"
     },
     "manifest_version": 3
